--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1>profile</h1>
-        <img src="WhatsApp Image 2025-03-26 at 11.46.52 AM.jpeg" alt="image" width="200" height="200">
+        <img src="WhatsApp Image 2025-03-26 at 12.02.04 PM.jpeg" alt="image" width="200" height="200">
     </div>
     <div>
         <h1>Introduction to html</h1>
